# MicroCRT

./: CMakeLists.txt  README.md
cmake/: microcrt_config.cmake
docx/libc/: arm-armlib-printf-analysis.md  emrun-vfprintf-alias-analysis.md  newlib-nano-printf-analysis.md  picolibc-printf-analysis.md  printf-architecture.md  printf-design-review.md  printf-migration.md  printf-plan.md
include/libc/: stdio.h  stdlib.h  string.h
include/libm/: math.h
src/libc/: CMakeLists.txt  microcrt_placeholder.c
src/libc/stdio/: CMakeLists.txt  fileops.c  fprintf.c  iob.c  iprintf.c  printf.c  printf_full.c  snprintf.c  sprintf.c  vfprintf.c  vprintf.c
src/libc/stdio/legacy/: dtoa.h  fileops.c  iob.c  printf.c  snprintf.c  sprintf.c  stdio_private.h  ultoa_invert.c  vfprintf.c
src/libc/stdio/printf/: README.md  __printf_stream_api.h  __printf_string_api.h  _printf_a.c  _printf_b.c  _printf_c.c  _printf_char.inc  _printf_char_core.c  _printf_conversion_dispatch.c  _printf_d.c  _printf_e.c  _printf_f.c  _printf_float.c  _printf_float.inc  _printf_fp_dec.c  _printf_fp_hex.c  _printf_g.c  _printf_i.c  _printf_int.c  _printf_int.inc  _printf_int_base.c  _printf_int_dec.c  _printf_n.c  _printf_n.inc  _printf_o.c  _printf_p.c  _printf_parser.c  _printf_pointer.c  _printf_positional.c  _printf_s.c  _printf_str.inc  _printf_string_core.c  _printf_text.c  _printf_text_core.c  _printf_u.c  _printf_x.c  dtoa.h  dtoa_engine.c  dtox_engine.c  fprintf.c  (+38 more)
src/libc/stdio/printf/api/: README.md  fprintf.c  iprintf.c  printf.c  snprintf.c  sprintf.c  vprintf.c
src/libc/stdio/printf/core/: README.md  printf_core_body.inc  printf_core_dispatch.inc  printf_core_parser.inc  vfprintf_support.inc  vfprintf_variant_config.inc
src/libc/stdio/printf/entry/: README.md  _printf_a.c  _printf_c.c  _printf_d.c  _printf_e.c  _printf_f.c  _printf_g.c  _printf_i.c  _printf_n.c  _printf_o.c  _printf_p.c  _printf_s.c  _printf_u.c  _printf_x.c
src/libc/stdio/printf/helper/: README.md  _printf_fp_dec.c  _printf_fp_hex.c  _printf_int_base.c  _printf_int_dec.c  _printf_pointer.c
src/libc/stdio/printf/shells/: README.md  vfprintf_default.c  vfprintf_integer.c
tests/: CMakeLists.txt  runtime_stubs.c  test_printf_extended.c  test_printf_smoke.c
(+9 files in other folders)
